fixed up styling on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -92,6 +92,18 @@ footer a:hover {
     color: lightblue;
 }
 
+@media screen and (max-width: 997px) {
+    :root {
+        font-size: 16px;
+    }
+    .display-4 {
+        font-size: 2rem
+    }
+    .col-lg-6:first-of-type {
+        margin-bottom: 1rem;
+    }
+}
+
 @media screen and (max-width: 1600px) {
     footer {
         position: unset;
